--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "electron": "^25.9.8",
     "electron-builder": "^24.13.3"
   },
